force-app/main/default/objects/Member_Login_Month__c/Member_Login_Month__c.object-meta.xml
<CustomObject>
    <description
  >Durable monthly login rollup: one row per member per month with that member's login count, summed from Fiscal_Year_Login_History__c by LoginRollupBatch. Persists after LoginHistoryCleanupBatch purges the mirror; backs the Member Logins Per Month chart and per-member drill.</description>
    <label>Member Login Month</label>
    <nameField>
        <displayFormat>MLM-{0000}</displayFormat>
        <label>Member Login Month Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Login Months</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>