force-app/main/default/objects/Member_Login_Month__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description
  >Unique &lt;userId&gt;-YYYY-MM composite so the batch upserts exactly one row per member per month (Date fields cannot be external ids).</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>