force-app/main/default/objects/Member_Login_Month__c/fields/Login_Count__c.field-meta.xml
<CustomField>
    <fullName>Login_Count__c</fullName>
    <description
  >Number of (member) logins by this member in this month, summed from the filtered login mirror.</description>
    <label>Login Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>