force-app/main/default/objects/Member_Login_Month__c/fields/Member_Link__c.field-meta.xml
<CustomField>
    <fullName>Member_Link__c</fullName>
    <description
  >The member's name as a click-through link to their Contact record (via the login User's ContactId). Used as the member column in the Member Logins Per Month drill.</description>
    <formula
  >HYPERLINK("/" &amp; User__r.ContactId, Member_Name__c, "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Member</label>
    <type>Text</type>
</CustomField>