force-app/main/default/objects/Member_Login_Month__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description
  >Denormalized member full name, so the row is self-describing after the login mirror is purged or the User is deleted. Used as the drill grouping/display.</description>
    <label>Member Name</label>
    <length>121</length>
    <required>true</required>
    <type>Text</type>
</CustomField>