force-app/main/default/objects/Member_Login_Month__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The member (User) these logins belong to. SetNull so the row survives if the User is later deleted; Member_Name__c preserves the identity.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Member Login Months</relationshipLabel>
    <relationshipName>Member_Login_Months</relationshipName>
    <type>Lookup</type>
</CustomField>